--- a/Course 1 - Programming Foundations with JavaScript, HTML and CSS/Week 3 - JavaScript for Web Pages/3.programming-exercise-todo-list/todo-list/index.html
+++ b/Course 1 - Programming Foundations with JavaScript, HTML and CSS/Week 3 - JavaScript for Web Pages/3.programming-exercise-todo-list/todo-list/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Buttons with div practice</title>
+    <title>TODO list</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
