--- a/Course 1 - Programming Foundations with JavaScript, HTML and CSS/Week 3 - JavaScript for Web Pages/8.try-it-convert-an-image-to-grayscale/convert-an-image-to-grayscale/index.html
+++ b/Course 1 - Programming Foundations with JavaScript, HTML and CSS/Week 3 - JavaScript for Web Pages/8.try-it-convert-an-image-to-grayscale/convert-an-image-to-grayscale/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <h1>Convert an Image to Grayscale</h1>
-    <canvas id="can"></canvas>
+    <canvas id="can1"></canvas>
+    <canvas id="can2"></canvas>
     <p>
         Filename:
         <input type="file" multiple="false" accept="image/*" id="finput" onchange="upload()">
